freshed-rs-macros/tests/ui/fail/html_async_in_missing_markup.rs
use freshed_rs_macros::html_async_in;

fn main() {
    let ctx = 5;
    let _ = html_async_in!(ctx,);
}
